Vision/Source/ATMCD32D.pas

    function SetNextAddress16; external 'atmcd32d.dll' name 'SetNextAddress16'; 
    function GetSpoolProgress; external 'atmcd32d.dll' name 'GetSpoolProgress'; 
    function GetTotalNumberImagesAcquired; external 'atmcd32d.dll' name 'GetTotalNumberImagesAcquired'; 
    function GetSizeOfCircularBuffer; external 'atmcd32d.dll' name 'GetSizeOfCircularBuffer'; 
    function GetMostRecentImage; external 'atmcd32d.dll' name 'GetMostRecentImage'; 
    function GetOldestImage; external 'atmcd32d.dll' name 'GetOldestImage'; 
    function GetNumberNewImages; external 'atmcd32d.dll' name 'GetNumberNewImages'; 
    function GetImages; external 'atmcd32d.dll' name 'GetImages'; 
    function GetMostRecentImage16; external 'atmcd32d.dll' name 'GetMostRecentImage16'; 
    function GetOldestImage16; external 'atmcd32d.dll' name 'GetOldestImage16'; 
    function GetImages16; external 'atmcd32d.dll' name 'GetImages16'; 
    function SetFrameTransferMode; external 'atmcd32d.dll' name 'SetFrameTransferMode';
    function GetNumberVSAmplitudes; external 'atmcd32d.dll' name 'GetNumberVSAmplitudes';
    function GetBitDepth; external 'atmcd32d.dll' name 'GetBitDepth';
    function GetCameraInformation; external 'atmcd32d.dll' name 'GetCameraInformation';
    function SetCoolerMode; external 'atmcd32d.dll' name 'SetCoolerMode';
    function IsPreAmpGainAvailable; external 'atmcd32d.dll' name 'IsPreAmpGainAvailable';
    function GetFastestRecommendedVSSpeed; external 'atmcd32d.dll' name 'GetFastestRecommendedVSSpeed';
    function IsInternalMechanicalShutter; external 'atmcd32d.dll' name 'IsInternalMechanicalShutter';
    function SaveEEPROMToFile; external 'atmcd32d.dll' name 'SaveEEPROMToFile';
    function GetSlotBusDeviceFunction; external 'atmcd32d.dll' name 'GetSlotBusDeviceFunction';
    function InitializeDevice; external 'atmcd32d.dll' name 'InitializeDevice';
    function SetDMAParameters; external 'atmcd32d.dll' name 'SetDMAParameters';
    function SaveAsTiff; external 'atmcd32d.dll' name 'SaveAsTiff';
    function GetHVflag; external 'atmcd32d.dll' name 'GetHVflag';
    function GetMCPGain; external 'atmcd32d.dll' name 'GetMCPGain';
    function GetMCPVoltage; external 'atmcd32d.dll' name 'GetMCPVoltage';
    function WaitForAcquisition; external 'atmcd32d.dll' name 'WaitForAcquisition';
    function WaitForAcquisitionByHandle; external 'atmcd32d.dll' name 'WaitForAcquisitionByHandle';
    function CancelWait; external 'atmcd32d.dll' name 'CancelWait';
    function GetMostRecentColorImage16; external 'atmcd32d.dll' name 'GetMostRecentColorImage16';
    function GetControllerCardModel; external 'atmcd32d.dll' name 'GetControllerCardModel';
end.


